<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Z1_Params" Id="{4d3369e9-80e7-0a3f-0090-1738805cc648}">
    <Declaration><![CDATA[TYPE ST_Z1_Params :
STRUCT
	tWaiting	:	TIME	:= T#3S;	// durata della fase di carico nuovo pezzo
	tTravelTime	:	TIME	:= T#4S;	// tempo per arrivare a I5
	tDelayToZ2	:	TIME	:= T#2S;	// ritardo per arrivare a Z2
	tStopDelay	:	TIME	:= T#1S;	// permanenza nello stato Stop
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>