<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Z1_Status" Id="{18146001-dbbc-0597-303a-9374f7af9da5}">
    <Declaration><![CDATA[TYPE ST_Z1_Status :
STRUCT
	eStep		:	E_Z1_Step;		// passo della macchina a stati per Z1
	strStep		:	STRING;			// passo come stringa
	tStepTime	:	TIME;			// tempo di permanenza nello stato
	eErrorStep	:	E_Z1_Step;		// stato in cui si è generato l'errore
	nErrorId	:	UDINT;			// id errore
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>